public/_css/nav.css
header {
    margin-top: 10px;
    margin-left: 10px;
}

header nav a {
    margin-right: -5px;
}

header nav a:not([title="home"]) img:first-child {
    display: inline;
}

header nav a:not([title="home"]) img:last-child {
    display: none;
}

header nav a:not([title="home"]):hover img:first-child {
    display: none;
}

header nav a:not([title="home"]):hover img:last-child {
    display: inline;
}

